--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -81,21 +81,82 @@
 </div>
 
 
-<div class="textura-prev-pueblos">
+<div class="textura-post-pueblos prev-contenidos-destacados">
+    <img src="../static/imagenes/textura-post-pueblos.svg" alt="textura" width="w-100">
+</div>
+
+<section class="container-fluid mensaje-adhesion contenidos-destacados">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-5">
+                <h3><b>Contenidos <span>Destacados</span></b></h3>
+                <p>Todo lo que tienes que saber para votar en las próximas elecciones de una manera libre e informada.</p>
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/uploads/decidim/attachment/file/149/Kit_Informacio%CC%81n_oportuna_Elecciones_2021.pdf" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>Elecciones mayo 2021 <span>¡Todo lo que debes saber!</span></h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/formate/f/129/" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>Contenidos en <span>otras lenguas</span></h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/formate/f/5/" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>Contenidos <span>accesibles</span></h4>
+               </a>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
+<div class="textura-post-contenidos-destacados">
     <img src="{% static 'imagenes/textura-decoracion-postbanner.svg' %}" alt="textura">
 </div>
 
 
-<section class="container-fluid mensaje-adhesion">
+<section class="container-fluid mensaje-adhesion noticias-destacadas">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <h3><b>Contenidos Destacados</b></h3>
-                <p>Entonces pídeles que se comprometan por el derecho a la participación ciudadana inclusiva</p>
-                <div class="boton">
-                    <a class="boton-antp" href="#" onclick="tweetCoso();return false;" target="_blank">Invita a tu candidato o candidata</a>
-                </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-5">
+                <h3><b>Noticias <span>Destacadas</span></b></h3>
+                <p>Entérate de las últimas novedades de Ahora Nos Toca Participar.</p>
             </div>
+
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="https://ahoranostocaparticipar.cl/uploads/decidim/attachment/file/149/Kit_Informacio%CC%81n_oportuna_Elecciones_2021.pdf" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>Elecciones mayo 2021 <span>¡Todo lo que debes saber!</span></h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/56" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>Lanzan Manual “Miradas para la inclusión: participación ciudadana de grupos excluidos”</h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/54" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>#ParticipamosTodxs: la campaña que busca garantizar la participación ciudadana inclusiva en la Convención</h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/57" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>ACNUDH y PNUD CHILE presentan plataforma web Pueblos Indígenas y Constitución</h4>
+               </a>
+            </div>
+
+
         </div>
     </div>
 
