--- a/mn_juego/static/style.css
+++ b/mn_juego/static/style.css
@@ -2383,6 +2383,11 @@ section.container-fluid.mensaje-adhesion.contenidos-destacados {
     transition: 0.5s all;
 }
 
+
+.portada h2.titulo-portada {
+    font-size: 3.2em;
+}
+
 @media (max-width:768px) {
     .contenidos-destacados a h4 {
         margin-bottom: 50px;
@@ -2415,6 +2420,11 @@ section.container-fluid.mensaje-adhesion.contenidos-destacados {
 
 }
 
+@media (max-width:970px) {
+    .portada h2.titulo-portada {
+        font-size: 2.8em;
+    }
+}
 
 @media (max-width:970px) {
     .prev-contenidos-destacados {
@@ -2452,6 +2462,18 @@ section.container-fluid.mensaje-adhesion.contenidos-destacados {
     .textura-post-contenidos-destacados img {
         bottom: 130px;
     }
+    .portada .boton-acla {
+        bottom: 5%;
+    }
+    .contenidos-destacados h3 {
+        font-size: 2.4em;
+    }
+}
+
+@media (max-width:600px) {
+    .portada h2.titulo-portada {
+        font-size: 2.4em;
+    }
 }
 
 @media (max-width:530px) {
@@ -2466,5 +2488,12 @@ section.container-fluid.mensaje-adhesion.contenidos-destacados {
     }
     .noticias-destacadas {
         bottom: 50px;
+    }
+}
+
+
+@media (max-width:450px) {
+    .portada h2.titulo-portada {
+        font-size: 2.2em;
     }
 }
