--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -11,7 +11,8 @@
 <div class="portada">
     <h2 class="titulo-portada">
         <!--<span>Participamos todos</span><br>-->
-        ¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
+        Creemos en la participación para fortalecer la democracia y la cohesión social desde las diversas ciudadanías y territorios. <span>¡Infórmate, participa e incide!
+        </span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
         <a data-scroll href="#busqueda-candidatos"><img src="{% static 'imagenes/icono-arrow.svg' %}" alt="icono scroll"></a>
@@ -95,19 +96,19 @@
 
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/uploads/decidim/attachment/file/149/Kit_Informacio%CC%81n_oportuna_Elecciones_2021.pdf" target="_blank">
-                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <img src="../static/imagenes/contenido-destacado-1.jpg" alt="img" class="w-100">
                    <h4>Elecciones mayo 2021 <span>¡Todo lo que debes saber!</span></h4>
                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/formate/f/129/" target="_blank">
-                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <img src="../static/imagenes/contenido-destacado-2.jpg" alt="img" class="w-100">
                    <h4>Contenidos en <span>otras lenguas</span></h4>
                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/formate/f/5/" target="_blank">
-                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <img src="../static/imagenes/contenido-destacado-3.jpg" alt="img" class="w-100">
                    <h4>Contenidos <span>accesibles</span></h4>
                </a>
             </div>
@@ -131,27 +132,29 @@
                 <p>Entérate de las últimas novedades de Ahora Nos Toca Participar.</p>
             </div>
 
-            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
-                <a href="https://ahoranostocaparticipar.cl/uploads/decidim/attachment/file/149/Kit_Informacio%CC%81n_oportuna_Elecciones_2021.pdf" target="_blank">
+            <!-- esta noticia se activara el lunes -->
+
+            <!--  <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="#" target="_blank">
                    <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
-                   <h4>Elecciones mayo 2021 <span>¡Todo lo que debes saber!</span></h4>
+                   <h4>Lorem <span>ipsum</span></h4>
                </a>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+            </div>-->
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/56" target="_blank">
-                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <img src="../static/imagenes/noticia-destacada-2.jpg" alt="img" class="w-100">
                    <h4>Lanzan Manual “Miradas para la inclusión: participación ciudadana de grupos excluidos”</h4>
                </a>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/54" target="_blank">
-                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <img src="../static/imagenes/noticia-destacada-3.jpg" alt="img" class="w-100">
                    <h4>#ParticipamosTodxs: la campaña que busca garantizar la participación ciudadana inclusiva en la Convención</h4>
                </a>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/57" target="_blank">
-                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <img src="../static/imagenes/noticia-destacada-4.jpg" alt="img" class="w-100">
                    <h4>ACNUDH y PNUD CHILE presentan plataforma web Pueblos Indígenas y Constitución</h4>
                </a>
             </div>
