add cambios imágenes

--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -83,7 +83,7 @@
 
 
 <div class="textura-post-pueblos prev-contenidos-destacados">
-    <img src="../static/imagenes/textura-post-pueblos.svg" alt="textura" width="w-100">
+    <img src="{% static 'imagenes/textura-post-pueblos.svg' %}" alt="textura" width="w-100">
 </div>
 
 <section class="container-fluid mensaje-adhesion contenidos-destacados">
@@ -96,19 +96,19 @@
 
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/uploads/decidim/attachment/file/149/Kit_Informacio%CC%81n_oportuna_Elecciones_2021.pdf" target="_blank">
-                   <img src="../static/imagenes/contenido-destacado-1.jpg" alt="img" class="w-100">
+                   <img src="{% static 'imagenes/contenido-destacado-1.jpg' %}" alt="img" class="w-100">
                    <h4>Elecciones mayo 2021 <span>¡Todo lo que debes saber!</span></h4>
                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/formate/f/129/" target="_blank">
-                   <img src="../static/imagenes/contenido-destacado-2.jpg" alt="img" class="w-100">
+                   <img src="{% static 'imagenes/contenido-destacado-2.jpg' %}" alt="img" class="w-100">
                    <h4>Contenidos en <span>otras lenguas</span></h4>
                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/formate/f/5/" target="_blank">
-                   <img src="../static/imagenes/contenido-destacado-3.jpg" alt="img" class="w-100">
+                   <img src="{% static 'imagenes/contenido-destacado-3.jpg' %}" alt="img" class="w-100">
                    <h4>Contenidos <span>accesibles</span></h4>
                </a>
             </div>
@@ -142,19 +142,19 @@
             </div>-->
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/56" target="_blank">
-                   <img src="../static/imagenes/noticia-destacada-2.jpg" alt="img" class="w-100">
+                   <img src="{% static 'imagenes/noticia-destacada-2.jpg' %}" alt="img" class="w-100">
                    <h4>Lanzan Manual “Miradas para la inclusión: participación ciudadana de grupos excluidos”</h4>
                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/54" target="_blank">
-                   <img src="../static/imagenes/noticia-destacada-3.jpg" alt="img" class="w-100">
+                   <img src="{% static 'imagenes/noticia-destacada-3.jpg' %}" alt="img" class="w-100">
                    <h4>#ParticipamosTodxs: la campaña que busca garantizar la participación ciudadana inclusiva en la Convención</h4>
                </a>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/57" target="_blank">
-                   <img src="../static/imagenes/noticia-destacada-4.jpg" alt="img" class="w-100">
+                   <img src="{% static 'imagenes/noticia-destacada-4.jpg' %}" alt="img" class="w-100">
                    <h4>ACNUDH y PNUD CHILE presentan plataforma web Pueblos Indígenas y Constitución</h4>
                </a>
             </div>
