--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -10,7 +10,9 @@
 
 <div class="portada">
     <h2 class="titulo-portada">
-        <!--<span>Participamos todos</span><br>-->¿Qué candidaturas se comprometen por el <span>derecho a la participación ciudadana inclusiva?</span></h2>
+        <!--<span>Participamos todos</span><br>-->
+        Creemos en la participación para fortalecer la democracia y la cohesión social desde las diversas ciudadanías y territorios. <span>¡Infórmate, participa e incide!
+        </span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
         <a data-scroll href="#busqueda-candidatos"><img src="{% static 'imagenes/icono-arrow.svg' %}" alt="icono scroll"></a>
@@ -78,6 +80,91 @@
         <img src="{% static 'imagenes/mancha-prev-footer.svg' %}" alt="personas" class="pueblo-originario">
     </div>
 </div>
+
+
+<div class="textura-post-pueblos prev-contenidos-destacados">
+    <img src="{% static 'imagenes/textura-post-pueblos.svg' %}" alt="textura" width="w-100">
+</div>
+
+<section class="container-fluid mensaje-adhesion contenidos-destacados">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-5">
+                <h3><b>Contenidos <span>Destacados</span></b></h3>
+                <p>Todo lo que tienes que saber para votar en las próximas elecciones de una manera libre e informada.</p>
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/uploads/decidim/attachment/file/149/Kit_Informacio%CC%81n_oportuna_Elecciones_2021.pdf" target="_blank">
+                   <img src="{% static 'imagenes/contenido-destacado-1.jpg' %}" alt="img" class="w-100">
+                   <h4>Elecciones mayo 2021 <span>¡Todo lo que debes saber!</span></h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/formate/f/129/" target="_blank">
+                   <img src="{% static 'imagenes/contenido-destacado-2.jpg' %}" alt="img" class="w-100">
+                   <h4>Contenidos en <span>otras lenguas</span></h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/formate/f/5/" target="_blank">
+                   <img src="{% static 'imagenes/contenido-destacado-3.jpg' %}" alt="img" class="w-100">
+                   <h4>Contenidos <span>accesibles</span></h4>
+               </a>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
+<div class="textura-post-contenidos-destacados">
+    <img src="{% static 'imagenes/textura-decoracion-postbanner.svg' %}" alt="textura">
+</div>
+
+
+<section class="container-fluid mensaje-adhesion noticias-destacadas">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-5">
+                <h3><b>Noticias <span>Destacadas</span></b></h3>
+                <p>Entérate de las últimas novedades de Ahora Nos Toca Participar.</p>
+            </div>
+
+            <!-- esta noticia se activara el lunes -->
+
+            <!--  <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="#" target="_blank">
+                   <img src="../static/imagenes/img-prototipo-noticia.jpg" alt="img" class="w-100">
+                   <h4>Lorem <span>ipsum</span></h4>
+               </a>
+            </div>-->
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/56" target="_blank">
+                   <img src="{% static 'imagenes/noticia-destacada-2.jpg' %}" alt="img" class="w-100">
+                   <h4>Lanzan Manual “Miradas para la inclusión: participación ciudadana de grupos excluidos”</h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/54" target="_blank">
+                   <img src="{% static 'imagenes/noticia-destacada-3.jpg' %}" alt="img" class="w-100">
+                   <h4>#ParticipamosTodxs: la campaña que busca garantizar la participación ciudadana inclusiva en la Convención</h4>
+               </a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <a href="https://ahoranostocaparticipar.cl/processes/noticias/f/6/posts/57" target="_blank">
+                   <img src="{% static 'imagenes/noticia-destacada-4.jpg' %}" alt="img" class="w-100">
+                   <h4>ACNUDH y PNUD CHILE presentan plataforma web Pueblos Indígenas y Constitución</h4>
+               </a>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
 
 
 {% endblock content %}
