Actualizando los partidos

--- a/mn_juego/templates/componentes/candidato_card.html
+++ b/mn_juego/templates/componentes/candidato_card.html
@@ -42,7 +42,7 @@
                         </li>
                         <li>
                             {% if candidatura.candidatura.partido %}
-                            <p><b>Partido Político:</b> {{candidatura.candidatura.partido}}</p>
+                            <p><b>Partido Político:</b> {{candidatura.candidatura.partido.nombre_largo}}</p>
                             {% endif %}
                         </li>
                     </ul>
