cambiar mensaje hero

--- a/mn_juego/templates/index.html
+++ b/mn_juego/templates/index.html
@@ -11,7 +11,7 @@
 <div class="portada">
     <h2 class="titulo-portada">
         <!--<span>Participamos todos</span><br>-->
-        Creemos en la participación para fortalecer la democracia y la cohesión social desde las diversas ciudadanías y territorios. <span>¡Infórmate, participa e incide!
+        Conoce las candidaturas comprometidas con el <span>derecho a la participación ciudadana inclusiva
         </span></h2>
     <div class="boton-acla">
         <p>Conocelas Aquí</p>
