--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -23,7 +23,13 @@
                 <a class="boton-antp" href="{{distrito.link_compromiso_inclusion}}" target="_blank">Revisa el compromiso</a>
             </div>
             <div class="compromiso blue">
-                <h3>Compromiso por la participación en el proceso constituyente.</h3>
+                <h3>
+                    {% if distrito.slug != 'distrito-24' %}
+                    Compromiso por la participación en el proceso constituyente.
+                    {% else %}
+                    Decálogo por una participación activa en el proceso constituyente Elaborado por organizaciones de Los Ríos.
+                    {% endif %}
+                </h3>
                 <p>Impulsado desde <a href="https://www.redparalaparticipacion.cl/" target="_blank">la Red para la Participación.</a></p>
                 <a class="boton-antp" href="{{distrito.link_compromiso_participacion}}" target="_blank">Revisa el compromiso</a>
             </div>
