Arreglando un texto

--- a/mn_juego/templates/resultado.html
+++ b/mn_juego/templates/resultado.html
@@ -32,7 +32,7 @@
                 <h3>
                     Decálogo por una participación activa en el proceso constituyente Elaborado por organizaciones de Los Ríos.
                 </h3>
-                <p>Impulsado desde <a>Impulsado por la Red para la Participación</a></p>
+                <p>Impulsado por la <a>Red para la Participación</a></p>
                 {% endif %}
                 <a class="boton-antp" href="{{distrito.link_compromiso_participacion}}" target="_blank">Revisa el compromiso</a>
             </div>
