--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -61,6 +61,10 @@
                 <a href="https://ciudadaniai.org/" target="_blank"><img src="{% static 'imagenes/logo-fci.svg' %}" alt="logo fci"></a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <p>Financiado por</p>
+                <a href="#" target="_blank"><img src="{% static 'imagenes/logoUE_BN.png' %}" alt="logo ue"></a>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <p>Con el soporte de</p>
                 <a href="https://www.alabs.org/" target="_blank"><img src="{% static 'imagenes/alabs-logo.svg' %}" alt="logo alabs"></a>
             </div>
