--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -62,7 +62,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <p>Financiado por</p>
-                <a href="#" target="_blank"><img src="{% static 'imagenes/logoUE_BN.png' %}" alt="logo ue"></a>
+                <a href="#" target="_blank"><img src="{% static 'imagenes/logoUE_BN.png' %}" alt="logo ue"></a><br /><p>Unión Europea</p>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <p>Con el soporte de</p>
