--- a/mn_juego/templates/componentes/footer.html
+++ b/mn_juego/templates/componentes/footer.html
@@ -56,7 +56,9 @@
                 <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img src="{% static 'imagenes/logo-softwarelibre.png' %}" alt="iconos software libre"></a>
                 <p>Web creada con <a href="#" class="enlace">software libre</a>.</p>
             </div>
-
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                <a href="#" target="_blank"><img src="{% static 'imagenes/logoue.png' %}" alt="logo ue"></a>
+            </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 fci-creditos">
                 <p>Desarrollado por</p>
                 <a href="https://ciudadaniai.org/" target="_blank"><img src="{% static 'imagenes/logo-fci.svg' %}" alt="logo fci"></a>
