--- a/mn_juego/templates/componentes/header.html
+++ b/mn_juego/templates/componentes/header.html
@@ -6,7 +6,7 @@
 {% endblock extrajstop %}
 
 
-<div class="mensaje-header">
+<!-- <div class="mensaje-header">
     <div class="container">
         <div class="mensaje">
             <p>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte #ParticipamosTodxs y firmar nuestros compromisos por la participación e inclusión.</p>
@@ -15,7 +15,7 @@
             <a class="boton-antp" href="https://docs.google.com/forms/d/e/1FAIpQLSd6LFc5dRF8F6CIVSuMdI25vGaSG1LVpGr1YXezIDuXatokhw/viewform" target="_blank">Adhiere los compromisos</a>
         </div>
     </div>
-</div>
+</div> -->
 
 <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light">
