--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -4,12 +4,12 @@
         <div class="row justify-content-md-center">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <h2>Candidaturas que han adherido en tu Distrito</h2>
-                <div class="mensaje-compromisos-candidatos">
+                <!-- <div class="mensaje-compromisos-candidatos">
                     <p>Si eres candidato/a a la Convención Constitucional, te invitamos a sumarte <b>#ParticipamosTodxs</b> y firmar nuestros compromisos por la participación e inclusión.</p>
                     <div class="boton">
                         <a class="boton-antp" href="https://docs.google.com/forms/d/e/1FAIpQLSd6LFc5dRF8F6CIVSuMdI25vGaSG1LVpGr1YXezIDuXatokhw/viewform" target="_blank">Adhiere los compromisos</a>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             {% for candidatura in distrito.candidates.all %} {% se_ha_comprometido candidatura as se_ha_comprometido_al_menos_con_una %} {% if se_ha_comprometido_al_menos_con_una %} {% include 'componentes/candidato_card.html' with candidatura=candidatura %} {% endif %} {% endfor %}
