esconde invita candidato

--- a/mn_juego/templates/candidatos_con_porcentajes.html
+++ b/mn_juego/templates/candidatos_con_porcentajes.html
@@ -41,14 +41,14 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <h3><b>¿No encontraste a tu <span>candidato o candidata</span>?</b></h3>
+                <!-- <h3><b>¿No encontraste a tu <span>candidato o candidata</span>?</b></h3>
                 <p>Entonces pídeles que se comprometan por el derecho a la participación ciudadana inclusiva</p>
                 <div class="boton">
                     <a class="boton-antp"
                        href="#"
                        onclick="tweetCoso();return false;"
                        target="_blank">Invita a tu candidato o candidata</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
